--- a/hello_app/app/views/layouts/application.html.erb
+++ b/hello_app/app/views/layouts/application.html.erb
@@ -5,11 +5,12 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+　　<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">　 
   </head>
-   <body>
+<body>
   <header>
   <div class="header-logo">
-    <%= link_to("小説投稿サイト", "/posts/index") %>
+    <%= link_to("小説投稿サイト", "/") %>
 　 </div>
   
   <ul class="header-menus">
@@ -43,6 +44,7 @@
   <% end %>
   </ul>
   </header>
+  
 　<% if flash[:notice] %>
 　  <div class="flash">
 　   <%= flash[:notice] %> 
