--- a/hello_app/app/assets/stylesheets/home.scss
+++ b/hello_app/app/assets/stylesheets/home.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+header{
+    display:flex;
+}
+
+li{
+    margin-left:8px;
+}
+
+p{
+    font-size:16px;
+    margin-bottom:20px;
+}
+
+.topimage{
+    margin-top:30px;
+}
+
+.header-logo{
+    text-align:center;
+    font-size:30px;
+    margin-top:20px;
+}
+
+.header-menus{
+    List-style-type:none;
+    display:flex;
+    justify-content:center;
+    margin-top:30px;
+    font-size:20px;
+    
+}
+
+
+
+
+
