--- a/hello_app/app/assets/stylesheets/posts.scss
+++ b/hello_app/app/assets/stylesheets/posts.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.like-btn {
+  color: #8899a6;
+}
+
+// .like-btn-unlikeのcolorを「#ff2581」にしてください
+.like-btn-unlike {
+  color: #ff2581;
+}
+
+// ここに指定されたCSSを貼り付けてください
+.posts-show-item .fa {
+  font-size: 16px;
+  margin-right: 3px;
+}
+
+.post-menus {
+  float: right;
+}
+
+.post-menus a, .post-menus input {
+  color: #8899a6;
+  text-decoration: underline;
+  font-size: 14px;
+}
