--- a/hello_app/app/views/home/top.html.erb
+++ b/hello_app/app/views/home/top.html.erb
@@ -1,3 +1,2 @@
-<h1>小説投稿サイト</h1>
 <p>このサイトでは自分の書いた小説を投稿でき、またみんなの小説を読むことができます</p>
-<img src="/book-3345390_640.jpg">
+<img src="/book-3345390_640.jpg" class="topimage">
