--- a/hello_app/app/views/posts/show.html.erb
+++ b/hello_app/app/views/posts/show.html.erb
@@ -3,18 +3,33 @@
 <div class="posts-show-item">
  　<div class="post-user-name">
  　 <img src="<%= "/user_images/#{@user.image_name}" %>">   
- 　 <%= limk_to(@user.name, "/users/#{@user.id}") %>   
- 　</div>
- 　<p>
+ 　 <%= link_to(@user.name, "/users/#{@user.id}") %>   
+ 　 </div>
+ 　 <p>
     <%= @post.content %>
- 　</p>
-    <div>
+ 　 </p>
+    <div class="post-time">
     <%= @post.created_at %>
-<div class="post-menus">
-  <%= link_to("編集","/posts/#{@post.id}/edit") %> 
-  <%= link_to("削除","/posts/#{@post.id}/destroy", {method: "post"}) %>
-</div>
-</div>
+    </div>
+     <% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
+      
+      <%= link_to("/likes/#{@post.id}/destroy", {method: "post"}) do %>
+      <i class="fas fa-heart"></i>
+      <% end %>
+    <% else %>
+    <%= link_to("/likes/#{@post.id}/create", {method: "post"}) do %>
+     <i class="far fa-heart"></i>
+    <% end %>
+    <% end %> 
+    
+    <%= @likes_count %>
+    
+    <% if @post.user_id == @current_user.id %>
+       <div class="post-menus">
+       <%= link_to("編集","/posts/#{@post.id}/edit") %> 
+       <%= link_to("削除","/posts/#{@post.id}/destroy", {method: "post"}) %>
+       </div>
+    <% end %>
 </div>    
 </div>
 </div>
