--- a/hello_app/app/views/users/edit.html.erb
+++ b/hello_app/app/views/users/edit.html.erb
@@ -16,6 +16,8 @@
     　<input name="image" type="file" >
     　<p>メールアドレス</p>
     　<input name="email" value="<%= @user.email %>">
+    　<p>パスワード</p>
+    　<input name="password" value="<%= @user.password %>"  type="password">
     　<input type="submit" value="保存">
     　<% end %>
     </div>    
